glib-macros/tests/closure_compiletest/14-closure-upgrade-or-else-first.stderr
error: upgrade failure attribute must not be followed by any other attributes. Found 1 more attribute
 --> tests/closure_compiletest/14-closure-upgrade-or-else-first.rs:4:41
  |
4 |     closure!(#[upgrade_or_else] || lol, #[strong] v, move || {println!("foo");});
  |                                         ^^^^^^^^^
