glib-macros/tests/closure_compiletest/14-closure-upgrade-or-else-first.rs
fn main() {
    use glib::closure;
    let v = std::rc::Rc::new(1);
    closure!(#[upgrade_or_else] || lol, #[strong] v, move || {println!("foo");});
}
